fix mobile spacing

--- a/src/app/[lng]/components/Cards/RowCards/RowCards.module.scss
+++ b/src/app/[lng]/components/Cards/RowCards/RowCards.module.scss
@@ -5,10 +5,11 @@
   grid-template-columns: 1fr;
   padding-block-start: 20px;
   column-gap: 64px;
-  row-gap: 120px;
+  row-gap: 96px;
 
   @include mq(tablet) {
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 120px;
   }
   @include mq(desktop) {
     grid-template-columns: repeat(3, 1fr);
