--- a/src/app/[lng]/components/FeaturedProjects/FeaturedProjects.module.scss
+++ b/src/app/[lng]/components/FeaturedProjects/FeaturedProjects.module.scss
@@ -3,7 +3,11 @@
 .cards {
   display: flex;
   flex-direction: column;
-  gap: 90px;
+  gap: 48px;
+
+  @include mq(tablet) {
+    gap: 96px;
+  }
 }
 
 .card__title {
