--- a/src/app/[lng]/modules/ContactSection/ContactSection.module.scss
+++ b/src/app/[lng]/modules/ContactSection/ContactSection.module.scss
@@ -64,6 +64,7 @@
 .btn {
   align-self: center;
   flex-shrink: 0;
+  margin-block-start: 0;
 }
 
 .svg {
